--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,5 +8,7 @@ edition = "2018"
 
 [dependencies]
 rand = "0.7.3"
+reqwest = { version = "0.10.9", features = ["blocking", "json"] }
+serde = { version = "1.0.118", features = ["derive"] }
 structopt = "0.3.21"
 url = "2.2.0"
