--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,6 +7,7 @@ edition = "2018"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+anyhow = "1.0.37"
 bigdecimal = { version = "0.2.0", features = ["serde"] }
 rand = "0.7.3"
 reqwest = { version = "0.10.9", features = ["blocking", "json"] }
